fixed author list in arXiv version

--- a/SC-challenge-arxiv.tex
+++ b/SC-challenge-arxiv.tex
@@ -42,14 +42,14 @@ School of Mechanical, Industrial, and Manufacturing Engineering,\\
 Oregon State University\\
 \href{mailto:kyle.niemeyer@oregonstate.edu}{kyle.niemeyer@oregonstate.edu}
 \and
-Daniel S. Katz\\
+Arfon M.\ Smith\\
+GitHub Inc.\\
+\href{mailto:arfon@github.com}{arfon@github.com}
+\and
+Daniel S.\ Katz\\
 Computation Institute, University of Chicago \&\\
 Argonne National Laboratory\\
 \href{mailto:d.katz@ieee.org}{d.katz@ieee.org}
-\and
-Arfon M. Smith\\
-GitHub Inc.\\
-\href{mailto:arfon@github.com}{arfon@github.com}
 }
 
 %\keywords{Software citation, Software credit, attribution}
