updated some ref details

--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -302,10 +302,13 @@
 @article{WSSSPE2,
 	Author = {Daniel S. Katz and Sou-Cheng T. Choi and Nancy Wilkins-Diehr and Neil {Chue Hong} and Colin C. Venters and James Howison and Frank J. Seinstra and Matthew Jones and Karen Cranston and Thomas L. Clune and Miguel de Val{-}Borro and Richard Littauer},
 	Date-Added = {2016-01-12 08:45:29 +0000},
-	Date-Modified = {2016-01-12 08:45:29 +0000},
+	Date-Modified = {2016-03-23 01:08:08 +0000},
+	Doi = {10.5334/jors.85},
 	Journal = {Journal of Open Research Software},
-	Note = {Accepted. Available at \url{http://arxiv.org/abs/1507.01715}},
+	Number = {1},
+	Pages = {e7},
 	Title = {Report on the Second Workshop on Sustainable Software for Science: Practice and Experiences {(WSSSPE2)}},
+	Volume = {4},
 	Year = {2016}}
 
 @article{Downs:2015aa,
@@ -342,10 +345,9 @@
 @techreport{Knepley_WSSSPE,
 	Author = {Matthew G. Knepley and Jed Brown and Lois Curfman McInnes and Barry Smith},
 	Date-Added = {2016-01-11 21:38:56 +0000},
-	Date-Modified = {2016-01-11 21:38:56 +0000},
+	Date-Modified = {2016-03-23 01:10:40 +0000},
+	Doi = {10.6084/m9.figshare.785731.v1},
 	Institution = {figshare},
-	Note = {\url{http://dx.doi.org/10.6084/m9.figshare.785731}},
-	Number = {785731},
 	Title = {Accurately Citing Software and Algorithms Used in Publications},
 	Year = {2013}}
 
@@ -367,8 +369,8 @@
 @article{WSSSPE3,
 	Author = {Daniel S. Katz and Kyle E. Niemeyer and Sou-Cheng T. Choi and James Hetherington and Frank L\"{o}ffler and Dan Gunter and Ray Idaszak and Steven R. Brandt and Mark A Miller and Sandra Gesing and Nick D. Jones and Nicholas Weber and Gabrielle Allen and Colin C. Venters and Ethan Davis and Lorraine Hwang and Ilian Todorov and Abani Patra and Miguel de Val{-}Borro},
 	Date-Added = {2016-01-11 21:38:20 +0000},
-	Date-Modified = {2016-01-12 08:47:32 +0000},
-	Note = {In preparation.},
+	Date-Modified = {2016-03-23 01:05:41 +0000},
+	Note = {Submitted. {\tt \href{http://arxiv.org/abs/1602.02296}{arXiv:1602.02296} [cs.SE]}},
 	Title = {Report on the Third Workshop on Sustainable Software for Science: Practice and Experiences {(WSSSPE3)}},
 	Year = {2016}}
 
@@ -385,9 +387,10 @@
 @article{Katz:2015aa,
 	Author = {Daniel S. Katz and Arfon M Smith},
 	Date-Added = {2016-01-05 07:44:29 +0000},
-	Date-Modified = {2016-01-13 07:35:26 +0000},
+	Date-Modified = {2016-03-23 01:09:22 +0000},
 	Doi = {10.5334/jors.by},
 	Journal = {Journal of Open Research Software},
+	Number = {1},
 	Pages = {e7},
 	Title = {{Transitive Credit} and {JSON-LD}},
 	Volume = {3},
