added notes for each of us

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -25,7 +25,9 @@
 \usepackage{color}
 
 \definecolor{blueish}{rgb}{0.2,0.2,0.8}
-\newcommand{\note}[1]{ {\textcolor{blueish}    { ***Note:      #1 }}}
+\newcommand{\katznote}[1]{ {\textcolor{blue} { ***DSK: #1 }}} % Dan
+\newcommand{\knnote}[1]{ {\textcolor{orange} { ***KEN: #1 }}} % Kyle
+\newcommand{\asnote}[1]{ {\textcolor{red} { ***AMS: #1 }}} %Arfon
 
 
 % Package to generate and customize Algorithm as per ACM style
