cleaned up acknowledgements a bit

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -25,7 +25,7 @@
 \usepackage{color}
 
 \definecolor{blueish}{rgb}{0.2,0.2,0.8}
-\newcommand{\katznote}[1]{ {\textcolor{blue} { ***DSK: #1 }}} % Dan
+\newcommand{\katznote}[1]{ {\textcolor{blueish} { ***DSK: #1 }}} % Dan
 \newcommand{\knnote}[1]{ {\textcolor{orange} { ***KEN: #1 }}} % Kyle
 \newcommand{\asnote}[1]{ {\textcolor{red} { ***AMS: #1 }}} %Arfon
 
@@ -137,8 +137,8 @@ DANIEL S. KATZ
 % The remaining information (journal title, volume, article number, date, etc.) is 'auto-generated'.
 
 \begin{bottomstuff}
-Some work by K.\ E.\ Niemeyer was supported by NSF grant ACI-1535065.
-Work by D.\ S.\ Katz was supported by the National Science Foundation (NSF) while working at the Foundation; any opinion, finding, and conclusions or recommendations expressed in this material are those of the author and do not necessarily reflect the views of the NSF.
+Work by K.\ E.\ Niemeyer was supported in part by the National Science Foundation (NSF) under grant ACI-1535065.
+Work by D.\ S.\ Katz was supported by the NSF while working at the Foundation; any opinion, finding, and conclusions or recommendations expressed in this material are those of the author and do not necessarily reflect the views of the NSF.
 
 Author's addresses: K.\ E.\ Niemeyer, School of Mechanical, Industrial, and Manufacturing Engineering, Oregon State University;
 A.\ M.\ Smith,
