added additional refs

--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -204,6 +204,158 @@
 @string{zangewmathphys = {Z. Angew. Math. Phys.}}
 
 
+@article{Wilson:2014aa,
+	Abstract = {<sec><title/><p>We describe a set of best practices for scientific software development, based on research and experience, that will improve scientists' productivity and the reliability of their software.</p></sec>},
+	Author = {Wilson, Greg AND Aruliah, D. A. AND Brown, C. Titus AND Chue Hong, Neil P. AND Davis, Matt AND Guy, Richard T. AND Haddock, Steven H. D. AND Huff, Kathryn D. AND Mitchell, Ian M. AND Plumbley, Mark D. AND Waugh, Ben AND White, Ethan P. AND Wilson, Paul},
+	Date-Added = {2016-03-23 01:48:30 +0000},
+	Date-Modified = {2016-03-23 01:48:30 +0000},
+	Doi = {10.1371/journal.pbio.1001745},
+	Journal = {PLoS Biol},
+	Number = {1},
+	Pages = {e1001745},
+	Title = {Best Practices for Scientific Computing},
+	Volume = {12},
+	Year = {2014},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1371%2Fjournal.pbio.1001745},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1371/journal.pbio.1001745}}
+
+@article{2015arXiv151207919A,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2015arXiv151207919A},
+	Archiveprefix = {arXiv},
+	Author = {{Allen}, A. and {Berriman}, G.~B. and {DuPrie}, K. and {Mink}, J. and {Nemiroff}, R. and {Robitaille}, T. and {Shamir}, L. and {Shortridge}, K. and {Taylor}, M. and {Teuben}, P. and {Wallin}, J.},
+	Date-Added = {2016-03-23 01:30:36 +0000},
+	Date-Modified = {2016-03-23 01:30:36 +0000},
+	Eprint = {1512.07919},
+	Journal = {ArXiv e-prints},
+	Keywords = {Computer Science - Digital Libraries, Astrophysics - Instrumentation and Methods for Astrophysics},
+	Month = dec,
+	Primaryclass = {cs.DL},
+	Title = {{Improving Software Citation and Credit}},
+	Year = 2015}
+
+@inproceedings{ontosoft,
+	Author = {Yolanda Gil and Varun Ratnakar and Daniel Garijo},
+	Booktitle = {Proceedings of the Eighth ACM International Conference on Knowledge Capture (K-CAP)},
+	Date-Added = {2016-03-23 01:30:36 +0000},
+	Date-Modified = {2016-03-23 01:30:36 +0000},
+	Month = {Oct.},
+	Title = {OntoSoft: Capturing Scientific Software Metadata},
+	Year = 2015}
+
+@article{10.1371/journal.pone.0136631,
+	Author = {Huang, Yi-Hung AND Rose, Peter W. AND Hsu, Chun-Nan},
+	Date-Added = {2016-03-23 01:30:36 +0000},
+	Date-Modified = {2016-03-23 01:30:36 +0000},
+	Journal = {PLoS ONE},
+	Month = {08},
+	Note = {\url{http://dx.doi.org/10.1371/journal.pone.0136631}},
+	Number = {8},
+	Pages = {1--17},
+	Publisher = {Public Library of Science},
+	Title = {Citing a Data Repository: A Case Study of the Protein Data Bank},
+	Volume = {10},
+	Year = {2015},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1371/journal.pone.0136631}}
+
+@book{lipson2011cite,
+	Author = {Lipson, C.},
+	Date-Added = {2016-03-23 01:30:36 +0000},
+	Date-Modified = {2016-03-23 01:30:36 +0000},
+	Isbn = {9780226484648},
+	Lccn = {2010024721},
+	Publisher = {University of Chicago Press},
+	Series = {Chicago Guides to Writing, Editing, and Publishing},
+	Title = {Cite Right, Second Edition: A Quick Guide to Citation Styles--MLA, APA, Chicago, the Sciences, Professions, and More},
+	Year = {2011},
+	Bdsk-Url-1 = {https://books.google.com/books?id=igNK-1GpZ4wC}}
+
+@misc{mayernik_poster,
+	Author = {Matthew Mayernik and Keith Maull and David Hart},
+	Date-Added = {2016-03-23 01:30:36 +0000},
+	Date-Modified = {2016-03-23 01:30:36 +0000},
+	Howpublished = {\url{https://share.renci.org/SI2PI2015/2015_SI2PI_Posters/mayernik_SI2poster_Feb2015.pdf}},
+	Note = {{Poster presented at NSF SI2 PI} Meeting, Arlington, VA, Accessed: 2016-03-03},
+	Title = {Tracing the Use of Research Resources Using Persistent Citable Identifiers},
+	Year = {2015}}
+
+@misc{ssi-how-shalt-i-cite-thee,
+	Author = {{Mike Jackson}},
+	Date-Added = {2016-03-23 01:30:36 +0000},
+	Date-Modified = {2016-03-23 01:30:36 +0000},
+	Howpublished = {\url{http://www.software.ac.uk/blog/2014-07-30-oh-research-software-how-shalt-i-cite-thee}},
+	Note = {Accessed: 2016-02-17},
+	Title = {Oh research software, how shalt I cite thee?}}
+
+@misc{ssi-how-to-cite,
+	Author = {{Mike Jackson}},
+	Date-Added = {2016-03-23 01:30:36 +0000},
+	Date-Modified = {2016-03-23 01:30:36 +0000},
+	Howpublished = {\url{http://www.software.ac.uk/how-cite-and-describe-software}},
+	Note = {Accessed: 2016-02-17},
+	Title = {How to cite and describe software}}
+
+@misc{ssi-publish-or-be-damned,
+	Author = {{Neil Chue Hong}},
+	Date-Added = {2016-03-23 01:30:36 +0000},
+	Date-Modified = {2016-03-23 01:30:36 +0000},
+	Howpublished = {\url{http://www.software.ac.uk/blog/2011-05-02-publish-or-be-damned-alternative-impact-manifesto-research-software}},
+	Note = {Accessed: 2016-02-17},
+	Title = {Publish or be damned? An alternative impact manifesto for research software}}
+
+@article{parsons_duerr_minster,
+	Author = {Parsons, Mark A. and Duerr, Ruth and Minster, Jean-Bernard},
+	Date-Added = {2016-03-23 01:30:03 +0000},
+	Date-Modified = {2016-03-23 01:30:03 +0000},
+	Issn = {2324-9250},
+	Journal = {Eos, Transactions American Geophysical Union},
+	Keywords = {Informatics, Science policy, Public Issues, informatics, citation},
+	Note = {\url{http://dx.doi.org/10.1029/2010EO340001}},
+	Number = {34},
+	Pages = {297--298},
+	Title = {Data Citation and Peer Review},
+	Volume = {91},
+	Year = {2010},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1029/2010EO340001}}
+
+@misc{ssi-citation-files,
+	Author = {{Robin Wilson}},
+	Date-Added = {2016-03-23 01:29:59 +0000},
+	Date-Modified = {2016-03-23 01:29:59 +0000},
+	Howpublished = {\url{http://www.software.ac.uk/blog/2013-09-02-encouraging-citation-software-introducing-citation-files}},
+	Note = {Accessed: 2016-02-17},
+	Title = {Encouraging citation of software -- introducing {CITATION} files}}
+
+@article{10.7717/peerj-cs.1,
+	Abstract = {
+        Reproducibility and reusability of research results is an important concern in scientific communication and science policy. A foundational element of reproducibility and reusability is the open and persistently available presentation of research data. However, many common approaches for primary data publication in use today do not achieve sufficient long-term robustness, openness, accessibility or uniformity. Nor do they permit comprehensive exploitation by modern Web technologies. This has led to several authoritative studies recommending uniform direct citation of data archived in persistent repositories. Data are to be considered as first-class scholarly objects, and treated similarly in many ways to cited and archived scientific and scholarly literature. Here we briefly review the most current and widely agreed set of principle-based recommendations for scholarly data citation, the Joint Declaration of Data Citation Principles (JDDCP). We then present a framework for operationalizing the JDDCP; and a set of initial recommendations on identifier schemes, identifier resolution behavior, required metadata elements, and best practices for realizing programmatic machine actionability of cited data. The main target audience for the common implementation guidelines in this article consists of publishers, scholarly organizations, and persistent data repositories, including technical staff members in these organizations. But ordinary researchers can also benefit from these recommendations. The guidance provided here is intended to help achieve widespread, uniform human and machine accessibility of deposited data, in support of significantly improved verification, validation, reproducibility and re-use of scholarly/scientific data.
+      },
+	Author = {Starr, Joan and Castro, Eleni and Crosas, Merc{\`e} and Dumontier, Michel and Downs, Robert R. and Duerr, Ruth and Haak, Laurel L. and Haendel, Melissa and Herman, Ivan and Hodson, Simon and Hourcl{\'e}, Joe and Kratz, John Ernest and Lin, Jennifer and Nielsen, Lars Holm and Nurnberger, Amy and Proell, Stefan and Rauber, Andreas and Sacchi, Simone and Smith, Arthur and Taylor, Mike and Clark, Tim},
+	Date-Added = {2016-03-23 01:29:51 +0000},
+	Date-Modified = {2016-03-23 01:29:51 +0000},
+	Issn = {2376-5992},
+	Journal = {PeerJ Computer Science},
+	Keywords = {Data citation, Machine accessibility, Data archiving, Data accessibility},
+	Month = {5},
+	Note = {\url{https://dx.doi.org/10.7717/peerj-cs.1}},
+	Pages = {e1},
+	Title = {Achieving human and machine accessibility of cited data in scholarly publications},
+	Volume = {1},
+	Year = {2015},
+	Bdsk-Url-1 = {http://dx.doi.org/10.7717/peerj-cs.1}}
+
+@article{VandeSompel2004,
+	Author = {Herbert {Van de Sompel} and Sandy Payette and John Erickson and Carl Lagoze and Simeon Warner},
+	Date-Added = {2016-03-23 01:29:44 +0000},
+	Date-Modified = {2016-03-23 01:29:44 +0000},
+	Journal = {D-Lib Magazine},
+	Month = sep,
+	Note = {\url{http://www.dlib.org/dlib/september04/vandesompel/09vandesompel.html}},
+	Number = {9},
+	Title = {Rethinking Scholarly Communication: Building the System that Scholars Deserve},
+	Volume = {10},
+	Year = 2004}
+
 @misc{Depsy,
 	Author = {Jason Priem and Heather Piwowar},
 	Date-Added = {2016-01-17 18:56:31 +0000},
