work on comments

--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -404,12 +404,29 @@
 	Author = {{Data Citation Synthesis Group}},
 	Date-Added = {2016-01-13 07:09:40 +0000},
 	Date-Modified = {2016-01-13 07:09:56 +0000},
-	Editor = {Maryann Martone},
+	dskEditor = {Maryann Martone},
 	Howpublished = {\url{https://www.force11.org/group/joint-declaration-data-citation-principles-final}},
-	Note = {Accessed: 2015-10-28},
+	Note = {Maryann Martone, Editor. Accessed: 2015-10-28},
 	Publisher = {FORCE11},
 	Title = {Joint Declaration of Data Citation Principles},
 	Year = {2014}}
+
+@misc{SoftwareCitation2016,
+	Author = {{FORCE11 Software Citation Working Group}},
+	dskEditor = {Arfon M. Smith and Daniel S.\ Katz and Kyle E.\ Neimeyer},
+	Howpublished = {\LaTeX\ source available at \url{https://github.com/force11/force11-scwg/tree/master/sc-principles}},
+	Note = {Arfon M. Smith, Daniel S.\ Katz, and Kyle E.\ Neimeyer, Editors. Draft document, Accessed: 2016-03-23},
+	Publisher = {FORCE11},
+	Title = {Software Citation Principles},
+	Year = {2016},
+}
+
+@misc{SCWG,
+	Title = {{FORCE11 Software Citation Working Group}},
+	Key = {{FORCE11 Software Citation Working Group}},
+	Note = {\url{https://www.force11.org/group/software-citation-working-group}, Accessed: 2016-03-23},
+	Year = {2015},
+}
 
 @misc{AAS:2016,
 	Author = {{American Astronomical Society}},
@@ -548,3 +565,12 @@
 	Volume = {3},
 	Year = {2015},
 	Bdsk-Url-1 = {http://dx.doi.org/10.5334/jors.by}}
+
+@misc{powl-citing-software,
+	Author = {{Purdue Online Writing Lab}},
+	Title = {{Reference List: Electronic Sources (Web Publications)}},
+	Note = {Accessed: 2016-03-16},
+	Year = {2015},
+	Howpublished = {\url{https://owl.english.purdue.edu/owl/resource/560/10/}},
+}
+
