--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -181,7 +181,7 @@ Some of the observations and recommendations made here come from their efforts, 
 Currently, services including Zenodo or fig\textbf{share} allow software developers to obtain DOIs for software; the former has a streamlined process~\cite{GitHubZenodo} to register DOIs for GitHub software releases.
 The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in JSON and XML to connect existing software repositories, archives, and libraries (e.g., GitHub, fig\textbf{share}, Zenodo).
 
-\knnote{mention workshops on software citation; University of Manchester (? can't actually find that one). Additional references are good.}
+\knnote{mention workshops on software citation; University of Manchester (? can't actually find that one). Additional references are good.} \katznote{\url{https://softwaredatacitation.org/}  \url{http://www.software.ac.uk/software-credit} maybe \url{http://software.ac.uk/maintainable-software-practice-workshop}} \katznote{Arfon, are the more that showed up in related work in the software citation activity?}
 
 Complementary efforts to provide credit for software development in research also depend on standardized citation practices.
 These include the transitive credit via JSON-LD scheme~\cite{Katz:2015aa} that assigns varying credit weights to contriponents---both contributors and research artifacts, including software and data---depending on their level of importance to the work.
@@ -215,6 +215,30 @@ Technical solutions to these challenges exist; community acceptance is instead n
 \knnote{add discussion of when software should be cited; mention F11 principles}
 Question of when software should be cited; although no clear answer, in order to ensure reproducibility of research results, software should be cited if used directly and important to the results.
 In other words, if using different software could produce different data or results, then the software used should be cited.
+
+\katznote{done below - feel free to edit} The authors of this paper are currently leading
+a working group under FORCE11 to develop principles for software citation~\cite{SCWG}.  The draft principles document~\cite{SoftwareCitation2016}, which is adapted from an earlier set of principles for data citation~\cite{DataCitation2014}, discusses
+how the decision on what software to cite should be made.  It currently states:
+
+\begin{quote}
+What software should be cited is the decision of the author(s) of the research work, in the context of community norms and practices, and in most scientific communities, these are currently in flux.
+In general, we believe that any software on which a research product directly depends should be cited, if it significantly contributes to the research product.
+Again, the specific decision of what is significant must be made by the author(s) of the product.
+However, an illustrative example is the use of Microsoft Excel in research.
+We suggest that if Excel is used to simply store and plot data, it does not need to be cited, but if it is used for statistical analysis, it should be.  Similarly, general software for conducting library research (e.g., JSTOR Mobile App), writing research papers (e.g., \LaTeX), scientific presentations (e.g., Powerpoint) or communications (e.g., Skype) should not be cited.
+This recommendation matches that of the Purdue Online Writing Lab: ``Do not cite standard office software (e.g. Word, Excel) or programming languages.  Provide references only for specialized software.''~\cite{powl-citing-software}
+
+Note that some software which is or could be captured as part of data provenance may not be cited.
+Citation is a record of software that is important to the research outcome, where provenance is a record of all steps (including software) used to generated particular data within the research process.
+This implies that for a data research product, provenance data will include all cited software, but not necessarily vice versa.
+Similarly, the software metadata that is recorded as part of data provenance should be a superset of the metadata recorded as part of software citation.
+And the data recorded for reproducibility should also be a superset of the metadata recorded as part of software citation.
+These statements may also be true for software products.
+In general, we intend the software citation principles to cover the minimum of what is necessary for software citation for the purpose of software identification.
+Other use cases (e.g., provenance, reproducibility) may lead to additional requirements (i.e., enhanced metadata).
+\end{quote}
+
+
 
 However, research and development efforts are needed to solve the remaining challenges.
 These questions include: how can we cite closed-source\slash commercial software---can the above information be provided, even if the the software itself is not publicly preserved?
