--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -194,17 +194,31 @@ The related PaperBadger project~\cite{PaperBadger} offers digital contributor ba
 \section{Challenges and Research Directions}
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
-Key challenges and research directions include the need to:
-\begin{itemize}
-\item identify necessary metadata associated with software for citation,
-\item standardize proper formats for citing software in publications,
-\item establish mechanisms for software to cite other software (i.e., dependencies),
-\item develop infrastructure to support indexing of software citations along with (or complementary to) the existing publication citation ecosystem,
-\item determine standard practices for peer review of software, and
-\item increase cultural acceptance of the concept of software as a digital product.
-\end{itemize}
+Key challenges and research directions (with possible solutions/methods) are shown in Table~\ref{tab:challenges}.
 
-\knnote{suggest ``few possible answers or clear path that might be followed''}
+
+\begin{table}[!t]
+    \tbl{\textbf{Key research challenges and possible solutions/methods. \katznote{formatting help welcome}\label{tab:challenges}}}
+    {\begin{tabular}{p{2in}p{3in}}
+        \hline
+\textbf{Key research Challenge} & \textbf{Possible solutions/methods} \\ \hline \hline
+
+Identify necessary metadata associated with software for citation & The CodeMeta project~\cite{CodeMeta} is working to do this now \\ \hline
+
+Standardize proper formats for citing software in publications & The FORCE11 Software Citation Working Group is currently working to define and gain community acceptance for software citation principles, after which (starting in April 2016) a follow-on group to implement the software citation principles will likely start, and part of the charge for this group will be to work with publishers on this challenge \\ \hline
+
+Establish mechanisms for software to cite other software (i.e., dependencies) & \\ \hline
+
+Develop infrastructure to support indexing of software citations along with (or complementary to) the existing publication citation ecosystem & The FORCE11 software citation implementation working group will also work on this, in collaboration with publishers and indexers \\ \hline
+
+Determine standard practices for peer review of software & Professional societies and science communities need to determine how this will happen \\ \hline
+
+Increase cultural acceptance of the concept of software as a digital product & \\ 
+\hline
+    \end{tabular}}
+\end{table}
+
+\knnote{suggest ``few possible answers or clear path that might be followed''} \katznote{tried to start in table}
 
 For software to be cited, we recommend that metadata include software name, primary authors\slash contributors (name and ORCID), DOI or other unique identifier, location where the software has been published\slash archived (DOI\slash URL), and software dependencies (via DOI).
 This information should be provided in a CITATION file, potentially in JSON or XML format (and with an appropriate metadata schema, e.g., DOAP) to replace or supplement plaintext and allow automatic processing.
