adding Kyle's suggested workshop URLs

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -181,7 +181,16 @@ Some of the observations and recommendations made here come from their efforts, 
 Currently, services including Zenodo or fig\textbf{share} allow software developers to obtain DOIs for software; the former has a streamlined process~\cite{GitHubZenodo} to register DOIs for GitHub software releases.
 The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in JSON and XML to connect existing software repositories, archives, and libraries (e.g., GitHub, fig\textbf{share}, Zenodo).
 
-\knnote{mention workshops on software citation; University of Manchester (? can't actually find that one). Additional references are good.} \katznote{\url{https://softwaredatacitation.org/}  \url{http://www.software.ac.uk/software-credit} maybe \url{http://software.ac.uk/maintainable-software-practice-workshop}} \katznote{Arfon, are the more that showed up in related work in the software citation activity?}
+\knnote{mention workshops on software citation; University of Manchester (? can't actually find that one). Additional references are good.} 
+
+\katznote{Some ideas: \\
+\url{https://softwaredatacitation.org/} \\
+\url{http://www.software.ac.uk/software-credit}  \\
+\url{http://astronomy-software-index.github.io/2015-workshop/} \\
+\url{https://geodynamics.org/cig/projects/saga/} \\
+maybe \url{http://software.ac.uk/maintainable-software-practice-workshop}} 
+
+\katznote{Arfon, are the more that showed up in related work in the software citation activity?}
 
 Complementary efforts to provide credit for software development in research also depend on standardized citation practices.
 These include the transitive credit via JSON-LD scheme~\cite{Katz:2015aa} that assigns varying credit weights to contriponents---both contributors and research artifacts, including software and data---depending on their level of importance to the work.
