some inital attempts to connect to DQ/IQ

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -163,7 +163,9 @@ In addition, since research results, including data, now depend on the specific 
 We also need a process to curate and review software.
 
 \knnote{introduce connection to data quality\slash information quality here}
-Data provenance requires, among other things, record of software used to generate or process that data~\cite{Wilson:2014aa}.
+Provenance of research results and data require, among other things, a record of the software used to generate or process that data~\cite{Wilson:2014aa}.
+errors in software or variations due to environment~\cite{Soergel:2015aa}
+
 
 Different communities follow widely varying practices for citing software, with guidelines ranging from citations of an associated paper or the software itself via DOI~\cite{AAS:2016} to no policy at all, with many ad hoc practices in between~\cite{Howison2015}.
 %Furthermore, some research communities have not yet adopted open-source mentalities regarding research software.
