--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -204,6 +204,17 @@
 @string{zangewmathphys = {Z. Angew. Math. Phys.}}
 
 
+@article{Soergel:2015aa,
+	Author = {David A W Soergel},
+	Date-Added = {2016-03-23 13:50:35 +0000},
+	Date-Modified = {2016-03-23 13:51:28 +0000},
+	Doi = {10.12688/f1000research.5930.2},
+	Journal = {F1000Research},
+	Pages = {303},
+	Title = {Rampant software errors may undermine scientific results [version 2; referees: 2 approved]},
+	Volume = {3},
+	Year = {2015}}
+
 @article{Wilson:2014aa,
 	Abstract = {<sec><title/><p>We describe a set of best practices for scientific software development, based on research and experience, that will improve scientists' productivity and the reliability of their software.</p></sec>},
 	Author = {Wilson, Greg AND Aruliah, D. A. AND Brown, C. Titus AND Chue Hong, Neil P. AND Davis, Matt AND Guy, Richard T. AND Haddock, Steven H. D. AND Huff, Kathryn D. AND Mitchell, Ian M. AND Plumbley, Mark D. AND Waugh, Ben AND White, Ethan P. AND Wilson, Paul},
