--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -22,9 +22,12 @@
 \usepackage[breaklinks=true]{hyperref}
 \usepackage{url}
 
-\usepackage{color}
-\usepackage{xcolor}
+\usepackage{booktabs,multicol}
 
+\usepackage{color}
+\usepackage[table]{xcolor}
+
+\definecolor{lightgray}{gray}{0.9}
 \definecolor{blueish}{rgb}{0.2,0.2,0.8}
 \newcommand{\katznote}[1]{ {\textcolor{blueish} { ***DSK: #1 }}} % Dan
 \newcommand{\knnote}[1]{ {\textcolor{orange} { ***KEN: #1 }}} % Kyle
@@ -207,29 +210,30 @@ The related PaperBadger project~\cite{PaperBadger} offers digital contributor ba
 
 Key challenges and research directions (with possible solutions/methods) are shown in Table~\ref{tab:challenges}.
 
+\rowcolors{2}{}{lightgray}
+\begin{table}[htbp]%
+\tbl{Key research challenges and possible solutions\slash methods\label{tab:challenges}}{%
+\begin{tabular}{@{}p{0.38\linewidth}p{0.58\linewidth}@{}}
+\toprule
+\textbf{Key research Challenge} & \textbf{Possible solutions/methods} \\
+\midrule
 
-\begin{table}[!t]
-    \tbl{\textbf{Key research challenges and possible solutions/methods. \katznote{formatting help welcome}\label{tab:challenges}}}
-    {\begin{tabular}{p{2in}p{3in}}
-        \hline
-\textbf{Key research Challenge} & \textbf{Possible solutions/methods} \\ \hline \hline
+Identify necessary metadata associated with software for citation & The CodeMeta project~\cite{CodeMeta} is working to do this now \\
 
-Identify necessary metadata associated with software for citation & The CodeMeta project~\cite{CodeMeta} is working to do this now \\ \hline
+Standardize proper formats for citing software in publications & The FORCE11 Software Citation Working Group is currently working to define and gain community acceptance for software citation principles, after which (starting in April 2016) a follow-on group to implement the software citation principles will likely start, and part of the charge for this group will be to work with publishers on this challenge \\
 
-Standardize proper formats for citing software in publications & The FORCE11 Software Citation Working Group is currently working to define and gain community acceptance for software citation principles, after which (starting in April 2016) a follow-on group to implement the software citation principles will likely start, and part of the charge for this group will be to work with publishers on this challenge \\ \hline
+Establish mechanisms for software to cite other software (i.e., dependencies) & \\
 
-Establish mechanisms for software to cite other software (i.e., dependencies) & \\ \hline
+Develop infrastructure to support indexing of software citations along with (or complementary to) the existing publication citation ecosystem & The FORCE11 software citation implementation working group will also work on this, in collaboration with publishers and indexers \\
 
-Develop infrastructure to support indexing of software citations along with (or complementary to) the existing publication citation ecosystem & The FORCE11 software citation implementation working group will also work on this, in collaboration with publishers and indexers \\ \hline
-
-Determine standard practices for peer review of software & Professional societies and science communities need to determine how this will happen \\ \hline
+Determine standard practices for peer review of software & Professional societies and science communities need to determine how this will happen \\
 
 Increase cultural acceptance of the concept of software as a digital product & \\ 
-\hline
-    \end{tabular}}
+\bottomrule
+\end{tabular}}
 \end{table}
 
-\knnote{suggest ``few possible answers or clear path that might be followed''} \katznote{tried to start in table}
+\knnote{suggest ``few possible answers or clear path that might be followed''}
 
 For software to be cited, we recommend that metadata include software name, primary authors\slash contributors (name and ORCID), DOI or other unique identifier, location where the software has been published\slash archived (DOI\slash URL), and software dependencies (via DOI).
 This information should be provided in a CITATION file, potentially in JSON or XML format (and with an appropriate metadata schema, e.g., DOAP) to replace or supplement plaintext and allow automatic processing.
