--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -207,13 +207,13 @@
 @article{Soergel:2015aa,
 	Author = {David A W Soergel},
 	Date-Added = {2016-03-23 13:50:35 +0000},
-	Date-Modified = {2016-03-23 13:51:28 +0000},
-	Doi = {10.12688/f1000research.5930.2},
+	Date-Modified = {2016-03-23 18:02:18 +0000},
 	Journal = {F1000Research},
 	Pages = {303},
 	Title = {Rampant software errors may undermine scientific results [version 2; referees: 2 approved]},
 	Volume = {3},
-	Year = {2015}}
+	Year = {2015},
+	Bdsk-Url-1 = {http://dx.doi.org/10.12688/f1000research.5930.2}}
 
 @article{Wilson:2014aa,
 	Abstract = {<sec><title/><p>We describe a set of best practices for scientific software development, based on research and experience, that will improve scientists' productivity and the reliability of their software.</p></sec>},
@@ -415,7 +415,7 @@
 	Author = {{Data Citation Synthesis Group}},
 	Date-Added = {2016-01-13 07:09:40 +0000},
 	Date-Modified = {2016-01-13 07:09:56 +0000},
-	dskEditor = {Maryann Martone},
+	Dskeditor = {Maryann Martone},
 	Howpublished = {\url{https://www.force11.org/group/joint-declaration-data-citation-principles-final}},
 	Note = {Maryann Martone, Editor. Accessed: 2015-10-28},
 	Publisher = {FORCE11},
@@ -424,20 +424,19 @@
 
 @misc{SoftwareCitation2016,
 	Author = {{FORCE11 Software Citation Working Group}},
-	dskEditor = {Arfon M. Smith and Daniel S.\ Katz and Kyle E.\ Neimeyer},
+	Date-Modified = {2016-03-23 18:02:37 +0000},
+	Dskeditor = {Arfon M. Smith and Daniel S.\ Katz and Kyle E.\ Niemeyer},
 	Howpublished = {\LaTeX\ source available at \url{https://github.com/force11/force11-scwg/tree/master/sc-principles}},
-	Note = {Arfon M. Smith, Daniel S.\ Katz, and Kyle E.\ Neimeyer, Editors. Draft document, Accessed: 2016-03-23},
+	Note = {Arfon M. Smith, Daniel S.\ Katz, and Kyle E.\ Niemeyer, Editors. Draft document, Accessed: 2016-03-23},
 	Publisher = {FORCE11},
 	Title = {Software Citation Principles},
-	Year = {2016},
-}
+	Year = {2016}}
 
 @misc{SCWG,
-	Title = {{FORCE11 Software Citation Working Group}},
 	Key = {{FORCE11 Software Citation Working Group}},
 	Note = {\url{https://www.force11.org/group/software-citation-working-group}, Accessed: 2016-03-23},
-	Year = {2015},
-}
+	Title = {{FORCE11 Software Citation Working Group}},
+	Year = {2015}}
 
 @misc{AAS:2016,
 	Author = {{American Astronomical Society}},
@@ -482,14 +481,14 @@
 @article{WSSSPE2,
 	Author = {Daniel S. Katz and Sou-Cheng T. Choi and Nancy Wilkins-Diehr and Neil {Chue Hong} and Colin C. Venters and James Howison and Frank J. Seinstra and Matthew Jones and Karen Cranston and Thomas L. Clune and Miguel de Val{-}Borro and Richard Littauer},
 	Date-Added = {2016-01-12 08:45:29 +0000},
-	Date-Modified = {2016-03-23 01:08:08 +0000},
-	Doi = {10.5334/jors.85},
+	Date-Modified = {2016-03-23 18:02:18 +0000},
 	Journal = {Journal of Open Research Software},
 	Number = {1},
 	Pages = {e7},
 	Title = {Report on the Second Workshop on Sustainable Software for Science: Practice and Experiences {(WSSSPE2)}},
 	Volume = {4},
-	Year = {2016}}
+	Year = {2016},
+	Bdsk-Url-1 = {http://dx.doi.org/10.5334/jors.85}}
 
 @article{Downs:2015aa,
 	Author = {Robert R Downs and W. Christopher Lenhardt and Erin Robinson and Ethan Davis and Nicholas Weber},
@@ -525,11 +524,11 @@
 @techreport{Knepley_WSSSPE,
 	Author = {Matthew G. Knepley and Jed Brown and Lois Curfman McInnes and Barry Smith},
 	Date-Added = {2016-01-11 21:38:56 +0000},
-	Date-Modified = {2016-03-23 01:10:40 +0000},
-	Doi = {10.6084/m9.figshare.785731.v1},
+	Date-Modified = {2016-03-23 18:02:18 +0000},
 	Institution = {figshare},
 	Title = {Accurately Citing Software and Algorithms Used in Publications},
-	Year = {2013}}
+	Year = {2013},
+	Bdsk-Url-1 = {http://dx.doi.org/10.6084/m9.figshare.785731.v1}}
 
 @article{WSSSPE1,
 	Author = {Daniel S. Katz and Sou-Cheng T. Choi and Hilmar Lapp and Ketan Maheshwari and Frank L\"{o}ffler and Matthew Turk and Marcus Hanwell and Nancy Wilkins-Diehr and James Hetherington and James Howison and Shel Swenson and Gabrielle Allen and Anne Elster and Bruce Berriman and Colin Venters},
@@ -579,9 +578,7 @@
 
 @misc{powl-citing-software,
 	Author = {{Purdue Online Writing Lab}},
-	Title = {{Reference List: Electronic Sources (Web Publications)}},
-	Note = {Accessed: 2016-03-16},
-	Year = {2015},
 	Howpublished = {\url{https://owl.english.purdue.edu/owl/resource/560/10/}},
-}
-
+	Note = {Accessed: 2016-03-16},
+	Title = {{Reference List: Electronic Sources (Web Publications)}},
+	Year = {2015}}
