added some refs for DQ/IQ connection

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -159,15 +159,16 @@ emails: \href{mailto:kyle.niemeyer@oregonstate.edu}{kyle.niemeyer@oregonstate.ed
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
 Modern science and engineering depend on software.
-We use citation to acknowledge traditional research results published in archival journals and conferences, but no such accepted standard exists to credit the considerable efforts that go into software.
+In fact, a 2009 survey of scientists found that 91\% consider software important or very important to their research~\cite{Hannay:2009wp}.
+The scientific community uses citation to acknowledge traditional research results published in archival journals and conferences, but no such accepted standard exists to credit the considerable efforts that go into software.
 One method to increase the amount of software developed, shared, and credited is to treat a software release as a publication.\knnote{Dan: can you support this statement with a citation?} 
-In addition, since research results, including data, now depend on the specific software used (e.g., version), proper citation---and the associated preservation---is necessary to ensure reproducibility.
+In addition, since research results, including data, now depend on the specific software used (e.g., version), proper citation---and the associated preservation---is necessary to ensure reproducibility~\cite{Sufi:2014en}.
 \textbf{The main challenge of software citation is that we need a way to uniquely identify released\slash published software so that it can be cited by others who use it.}
 We also need a process to curate and review software.
 
 \knnote{introduce connection to data quality\slash information quality here}
-Provenance of research results and data require, among other things, a record of the software used to generate or process that data~\cite{Wilson:2014aa}.
-errors in software or variations due to environment~\cite{Soergel:2015aa}
+Provenance of research results and data require, among other things, a record of the software used to generate or process that data~\cite{Sandve:2013gh,Wilson:2014aa}.
+errors in software or variations due to environment~\cite{Morin:2012hz,Soergel:2015aa}
 
 
 Different communities follow widely varying practices for citing software, with guidelines ranging from citations of an associated paper or the software itself via DOI~\cite{AAS:2016} to no policy at all, with many ad hoc practices in between~\cite{Howison2015}.
@@ -193,7 +194,8 @@ The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in 
 \url{http://www.software.ac.uk/software-credit}  \\
 \url{http://astronomy-software-index.github.io/2015-workshop/} \\
 \url{https://geodynamics.org/cig/projects/saga/} \\
-maybe \url{http://software.ac.uk/maintainable-software-practice-workshop}} 
+maybe \url{http://software.ac.uk/maintainable-software-practice-workshop}}
+\knnote{Workshop reports} \cite{Sufi:2014en,Ahalt:2015ve}; Software Publishing Special Interest Group\cite{Allen:2015ub}
 
 \katznote{Arfon, are the more that showed up in related work in the software citation activity?}
 
