--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -204,6 +204,126 @@
 @string{zangewmathphys = {Z. Angew. Math. Phys.}}
 
 
+@article{Stodden:2013aa,
+	Author = {Victoria Stodden and Peixuan Guo and Zhaokun Ma},
+	Date-Added = {2016-03-24 03:26:49 +0000},
+	Date-Modified = {2016-03-24 03:27:49 +0000},
+	Doi = {10.1371/journal.pone.0067111},
+	Journal = {PLoS ONE},
+	Number = {6},
+	Pages = {e67111},
+	Title = {Toward Reproducible Computational Research: An Empirical Analysis of Data and Code Policy Adoption by Journals},
+	Volume = {8},
+	Year = {2013}}
+
+@techreport{Ahalt:2015ve,
+	Author = {Ahalt, Stan and Carsey, Tom and Couch, Alva and Hooper, Rick and Ibanez, Luis and Idaszak, Ray and Jones, Matthew B and Lin, Jennifer and Robinson, Erin},
+	Date-Added = {2016-03-24 03:16:20 +0000},
+	Date-Modified = {2016-03-24 03:16:20 +0000},
+	Institution = {National Science Foundation},
+	Month = apr,
+	Title = {{NSF} Workshop on Supporting Scientific Discovery through Norms and Practices for Software and Data Citation and Attribution},
+	Year = {2015},
+	Bdsk-Url-1 = {http://dl.acm.org/citation.cfm?id=2795624}}
+
+@article{Allen:2015ub,
+	Author = {Allen, Alice and Berriman, G Bruce and DuPrie, Kimberly and Mink, Jessica and Nemiroff, Robert and Robitaille, Thomas and Shamir, Lior and Shortridge, Keith and Taylor, Mark and Teuben, Peter and Wallin, John},
+	Date-Added = {2016-03-24 03:16:20 +0000},
+	Date-Modified = {2016-03-24 03:16:20 +0000},
+	Eprint = {http://arxiv.org/abs/1512.07919v1},
+	Eprintclass = {cs.DL},
+	Eprinttype = {arxiv},
+	Month = dec,
+	Title = {Improving Software Citation and Credit},
+	Year = {2015},
+	Bdsk-Url-1 = {http://arxiv.org/abs/1512.07919v1}}
+
+@article{Chawla:2016te,
+	Author = {Chawla, Dalmeet Singh},
+	Date-Added = {2016-03-24 03:16:20 +0000},
+	Date-Modified = {2016-03-24 03:16:20 +0000},
+	Journal = {Nature},
+	Month = jan,
+	Pages = {115--116},
+	Title = {{The unsung heroes of scientific software}},
+	Volume = {529},
+	Year = {2016}}
+
+@inproceedings{Hannay:2009wp,
+	Address = {Vancouver, BC},
+	Author = {Hannay, Jo Erskine and Langtangen, Hans Petter and MacLeod, Carolyn and Pfahl, Dietmar and Singer, Janice and Wilson, Greg},
+	Booktitle = {Proceedings of the 2009 ICSE Workshop on Software Engineering for Computational Science and Engineering},
+	Date-Added = {2016-03-24 03:16:20 +0000},
+	Date-Modified = {2016-03-24 03:25:31 +0000},
+	Organization = {IEEE Computer Society},
+	Pages = {1--8},
+	Series = {SECSE},
+	Title = {How Do Scientists Develop and Use Scientific Software?},
+	Year = {2009},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/SECSE.2009.5069155}}
+
+@article{Merali:2010tw,
+	Author = {Merali, Zeeya},
+	Date-Added = {2016-03-24 03:16:20 +0000},
+	Date-Modified = {2016-03-24 03:16:20 +0000},
+	Journal = {Nature},
+	Month = oct,
+	Pages = {775--777},
+	Title = {{Error: why scientific programming does not compute}},
+	Volume = {467},
+	Year = {2010}}
+
+@article{Morin:2012hz,
+	Author = {Morin, A and Urban, J and Adams, P D and Foster, I and Sali, A and Baker, D and Sliz, P},
+	Date-Added = {2016-03-24 03:16:20 +0000},
+	Date-Modified = {2016-03-24 03:16:20 +0000},
+	Journal = {Science},
+	Number = {6078},
+	Pages = {159--160},
+	Title = {Shining Light into Black Boxes},
+	Volume = {336},
+	Year = {2012},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1126/science.1218263}}
+
+@article{Sandve:2013gh,
+	Author = {Sandve, Geir Kjetil and Nekrutenko, Anton and Taylor, James and Hovig, Eivind},
+	Date-Added = {2016-03-24 03:16:20 +0000},
+	Date-Modified = {2016-03-24 03:16:20 +0000},
+	Journal = {PLoS Comp Biol},
+	Month = oct,
+	Number = {10},
+	Pages = {e1003285},
+	Title = {Ten Simple Rules for Reproducible Computational Research},
+	Volume = {9},
+	Year = {2013},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1371/journal.pcbi.1003285}}
+
+@inproceedings{Sufi:2014en,
+	Address = {Edinburgh, United Kingdom},
+	Author = {Sufi, Shoaib and Chue Hong, Neil P and Hettrick, Simon and Antonioletti, Mario and Crouch, Stephen and Hay, Alexander and Inupakutika, Devasena and Jackson, Mike and Pawlik, Aleksandra and Peru, Giacomo and Robinson, John and Les Carr and De Roure, David and Goble, Carole and Parsons, Mark},
+	Booktitle = {Proceedings of the 1st ACM SIGPLAN Workshop on Reproducible Research Methodologies and New Publication Models in Computer Engineering},
+	Date-Added = {2016-03-24 03:16:20 +0000},
+	Date-Modified = {2016-03-24 03:16:20 +0000},
+	Month = jun,
+	Pages = {2:1--2:4},
+	Series = {TRUST '14},
+	Title = {Software in Reproducible Research: Advice and Best Practice collected from experiences at the Collaborations Workshop},
+	Year = {2014},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1145/2618137.2618140}}
+
+@article{YaleLawSchoolRoundtableonDataandCodeSharing:2010wf,
+	Author = {{Yale Law School Roundtable on Data and Code Sharing}},
+	Date-Added = {2016-03-24 03:16:20 +0000},
+	Date-Modified = {2016-03-24 03:16:20 +0000},
+	Journal = {Comput. Sci. Eng.},
+	Month = oct,
+	Number = {5},
+	Pages = {8--13},
+	Title = {Reproducible Research: Addressing the need for data and code sharing in computational science},
+	Volume = {12},
+	Year = {2010},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/MCSE.2010.113}}
+
 @article{Soergel:2015aa,
 	Author = {David A W Soergel},
 	Date-Added = {2016-03-23 13:50:35 +0000},
@@ -229,21 +349,6 @@
 	Year = {2014},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1371%2Fjournal.pbio.1001745},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1371/journal.pbio.1001745}}
-
-@article{2015arXiv151207919A,
-	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-	Adsurl = {http://adsabs.harvard.edu/abs/2015arXiv151207919A},
-	Archiveprefix = {arXiv},
-	Author = {{Allen}, A. and {Berriman}, G.~B. and {DuPrie}, K. and {Mink}, J. and {Nemiroff}, R. and {Robitaille}, T. and {Shamir}, L. and {Shortridge}, K. and {Taylor}, M. and {Teuben}, P. and {Wallin}, J.},
-	Date-Added = {2016-03-23 01:30:36 +0000},
-	Date-Modified = {2016-03-23 01:30:36 +0000},
-	Eprint = {1512.07919},
-	Journal = {ArXiv e-prints},
-	Keywords = {Computer Science - Digital Libraries, Astrophysics - Instrumentation and Methods for Astrophysics},
-	Month = dec,
-	Primaryclass = {cs.DL},
-	Title = {{Improving Software Citation and Credit}},
-	Year = 2015}
 
 @inproceedings{ontosoft,
 	Author = {Yolanda Gil and Varun Ratnakar and Daniel Garijo},
@@ -447,19 +552,6 @@
 	Note = {Accessed: 2016-01-12},
 	Title = {Policy Statement on Software},
 	Year = {2016}}
-
-@inproceedings{Hannay:2009hv,
-	Address = {Vancouver, BC},
-	Author = {Hannay, J E and Langtangen, Hans Peter and MacLeod, C and Pfahl, Dietmar and Singer, J and Wilson, Greg},
-	Booktitle = {SECSE '09},
-	Date-Added = {2016-01-13 05:30:19 +0000},
-	Date-Modified = {2016-01-13 05:30:19 +0000},
-	Month = may,
-	Pages = {1--8},
-	Publisher = {IEEE},
-	Title = {How do scientists develop and use scientific software?},
-	Year = {2009},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1109/SECSE.2009.5069155}}
 
 @misc{CodeMeta,
 	Author = {Carl Boettiger and Matt Jones and Arfon M Smith and Yolanda Gil and Martin Fenner and Lars Holm Nielsen and Mark Hahnel},
